# gst-test

gst-app/src/: main.c  play.c
gst-plugin/src/: Makefile.am  gsttestfilter.c  gsttestfilter.h
